add descriptions.